# pslib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
algorithm/: dnc_opt.cc  monotone_queue_opt.cc
data_structure/: cht.cc  cht.test.cc  dsu.cc  dsu.test.cc  fenwick_tree.cc  fenwick_tree.test.cc  line_container.cc  segtree.cc  segtree.test.cc  segtree_lazy.cc  segtree_lazy.test.cc
geometry/: convex_hull.cc  convex_hull.test.cc  misc.cc  point.cc  point.test.cc
graph/: 2_sat.cc  2_sat.test.cc  bipartite_matching.cc  bipartite_matching.test.cc  centroid_decomp.cc  centroid_decomp.test.cc  edmonds_karp.cc  scc.cc  scc.test.cc  spfa.cc  tree_compression.cc
include/: template.h
math/: crt.cc  crt.test.cc  fft.cc  fft.test.cc  miller_rabin.cc  number_theory.cc  number_theory.test.cc
misc/: big_int.cc  big_int.test.cc  coord_compression.cc  coord_compression.test.cc  custom_cmp.cc  print.cc  print.test.cc  print_debug.cc  template.cc
string/: kmp.cc  kmp.test.cc  suffix_array.cc
team_note/: index.html  package-lock.json  package.json  posthtml.config.js
team_note/content/: data-structure.md  geometry.md  graph.md  index.md  math.md  misc.md  string.md  template.md
team_note/script/: build.js  import-code.js
team_note/src/: index.js
